--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 
 <p style="text-align:center">Basierend auf&nbsp; <a href="http://matrix.org/">Matrix</a>&nbsp;zur Verf&uuml;gung gestellt durch&nbsp;<a href="http://element.io">Element</a></p>
 
-<p style="text-align:center"><a href="https://element.MYBASE/#/directory">R&auml;ume erkunden</a></p>
+<p style="text-align:center"><a href="https://element.BASEDOMAIN/#/directory">R&auml;ume erkunden</a></p>
 
 <p style="text-align:center"><strong><span style="font-size:20px"><span style="color:#c0392b">Sichern Sie jetzt Ihre Schl&uuml;ssel!<br />
 (siehe Einf&uuml;hrung S. 5)</span></span></strong></p>
@@ -16,7 +16,7 @@ Welcome to the Element Chat Server.</h2>
 
 <p style="text-align:center">Powered by&nbsp;<a href="https://matrix.org/">Matrix</a>, provided by <a href="http://element.io">Element</a>.</p>
 
-<p style="text-align:center"><a href="https://element.MYBASE/#/directory">Explore rooms</a></p>
+<p style="text-align:center"><a href="https://element.BASEDOMAIN/#/directory">Explore rooms</a></p>
 
 <p style="text-align:center"><strong><span style="font-size:20px"><span style="color:#c0392b">Create a Key Backup &amp; Passphrase now!<br />
 (see Getting Started Guite p. 5)</span></span></strong></p>
